# eglot

./: .dir-locals.el  .elpaignore  .exclude  .gitignore  .gitmodules  .hypb  .travis.yml  AUTHORS  ChangeLog  Changes  DEMO  DEMO-ROLO.otl  EPD.txt  HY-ABOUT  HY-ANNOUNCE  HY-ANNOUNCE-SHORT  HY-COPY  HY-NEWS  HY-README  HY-WHY.kotl  INSTALL  MANIFEST  MANUAL.md  Makefile  Makefile.am  NEWS  NEWS.md  PGN.txt  PLAN  README  README.md  README.md.html  README.org  TODO  _hypb  _pkg.el  acprep  chess-ai.el  chess-algebraic.el  chess-announce.el  (+148 more)
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml
.github/workflows/: test.yml
PR-tests-do_not_merge/: .gitignore  init.el  test-python.sh
PR-tests-do_not_merge/go/: main.go
PR-tests-do_not_merge/python/: requirements.txt
doc/: chess.texi
fixtures/: utf16.cpp
kotl/: EXAMPLE.kotl  MANIFEST  kcell.el  kexport.el  kfile.el  kfill.el  kimport.el  klabel.el  klink.el  kmenu.el  knode.el  kotl-autoloads.el  kotl-loaddefs.el  kotl-mode.el  kprop-em.el  kprop-xe.el  kproperty.el  kview.el  kvspec.el
man/: dir  hkey-help.txt  hyperbole.css  hyperbole.html  hyperbole.info  hyperbole.texi  version.texi
man/im/: demo.eps  hyperbole-cv.eps  koutliner.eps  menu-customization.eps  menu-hyperbole.eps  menu-koutline.eps  menu-rolo.eps
pieces/xboard/: bdd108.xpm  bdd116.xpm  bdd129.xpm  bdd21.xpm  bdd25.xpm  bdd29.xpm  bdd33.xpm  bdd37.xpm  bdd40.xpm  bdd45.xpm  bdd49.xpm  bdd54.xpm  bdd58.xpm  bdd64.xpm  bdd72.xpm  bdd80.xpm  bdd87.xpm  bdd95.xpm  bdl108.xpm  bdl116.xpm  bdl129.xpm  bdl21.xpm  bdl25.xpm  bdl29.xpm  bdl33.xpm  bdl37.xpm  bdl40.xpm  bdl45.xpm  bdl49.xpm  bdl54.xpm  bdl58.xpm  bdl64.xpm  bdl72.xpm  bdl80.xpm  bdl87.xpm  bdl95.xpm  bld108.xpm  bld116.xpm  bld129.xpm  bld21.xpm  (+396 more)
test/: fails.pgn  historic.pgn
