# -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ(2.61)

AC_INIT([emacs-chess],[2.0],[johnw@newartisans.com])
AC_CONFIG_SRCDIR([chess.el])
AM_INIT_AUTOMAKE([dist-bzip2])

# Checks for programs.
AC_PROG_MAKE_SET

# Checks for emacs lisp path
AM_PATH_LISPDIR

# Pepare the Makefiles
AC_CONFIG_FILES([Makefile])
AC_OUTPUT
